--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,8 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1>Welcome to my website!</h1>
-        <h2>Hi</h2>
+        <h1>Welcome to my website!!</h1>
+        <h2>Hi!!</h2>
         Hello, world!
     </body>
 </htmL>
